# agent-passport-standard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: IMPLEMENTATION-GUIDE.md  SECURITY-AUDIT.md  account-abstraction.md  aps-control-plane-profile.md  apsd-sidecar.md  clawchain-provider.md  k8s-hivemind-rollout.md  kill-switch-protocol.md  norad.md  openclaw-plugin.md  sitetrust-plugins.md
examples/: example-bundle.json  example-dna.json  example-envelope.json  example-passport.json  example-receipt.json  example-recovery.json
go/: API.md  benchmark_test.go  go.mod  go.sum
landing/: index.html
mcp-security/: README.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
python/: API.md  README.md  pyproject.toml
python/aps/: __init__.py  anchor.py  anchor_arweave.py  anchor_ethereum.py  attestation.py  bundle.py  compat.py  crypto.py  did.py  envelope.py  execution.py  mcp.py  passport.py  provenance.py  receipt.py  reputation.py  rotation.py  sybil.py  validate.py
python/conformance/: runner.py
python/tests/: test_anchor.py  test_anchor_arweave.py  test_anchor_ethereum.py  test_attestation.py  test_benchmarks.py  test_bundle.py  test_conformance.py  test_crypto.py  test_did.py  test_envelope.py  test_execution.py  test_mcp.py  test_passport.py  test_provenance.py  test_receipt.py  test_reputation.py  test_rotation.py  test_security.py  test_sybil.py  test_validate.py
spec/: CHANGELOG.md  IETF-SUBMISSION-GUIDE.md  SPECIFICATION.md  a2a-security.md  (+28 more)
(+140 files in other folders)
