[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aps-sdk"
version = "0.1.0"
description = "Python SDK for the Agent Passport Standard"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.20",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["aps*"]
